Closed
Bug 1028997
Opened 11 years ago
Closed 11 years ago
Assertion failure in nsMsgAttachmentHandler.h
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 33.0
People
(Reporter: nhnt11, Assigned: nhnt11)
References
Details
Attachments
(1 file)
|
2.04 KB,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
nsMsgAttachmentHandler.h:66:3: error: static_assert failed "Reference-counted classes should not have a public destructor. Try to make this class's destructor non-public. If that is really not possible, you can whitelist this class by providing a HasDangerousPublicDestructor specialization for it."
| Assignee | ||
Comment 1•11 years ago
|
||
This fixes the issue.
Updated•11 years ago
|
Attachment #8444502 -
Flags: review+
Updated•11 years ago
|
Comment 2•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 33.0
You need to log in
before you can comment on or make changes to this bug.
Description
•