Bug 1028997 - Assertion failure in nsMsgAttachmentHandler.h, r=Neil a=bustage fix for CLOSED TREE